--- a/lib/components/Pagination/base/pagination-base.scss
+++ b/lib/components/Pagination/base/pagination-base.scss
@@ -1,62 +1,82 @@
 @import "@quill/size.scss";
 @import "@quill/border.scss";
 @import "@quill/color.opacity.scss";
-@import "@quill/color.semantic.scss"; 
+@import "@quill/color.semantic.scss";
 @import "@quill/motion.scss";
 
-.variant{
+.variant {
     &__number {
         display: inline-flex;
         flex-direction: column;
         cursor: pointer;
         justify-content: center;
+        position: relative;
         align-items: center;
         height: var(--core-size-1600);
         width: var(--core-size-1600);
         border-radius: var(--core-size-200);
+
         &:hover {
             background-color: var(--core-color-opacity-black-100);
-            animation-timing-function: var(--core-motion-ease-400);
-            animation-duration: var(--core-motion-duration-200);
         }
 
         &:active {
             background-color: var(--core-color-opacity-black-200);
-            animation-timing-function: var(--core-motion-ease-400);
-            animation-duration: var(--core-motion-duration-200);
         }
-        &[aria-current=true] {
-            background-color: var(--core-color-solid-slate-1400);
-            &:hover {
-                background-color: var(--core-color-solid-slate-1400);
-            }
+
+        &[aria-current="true"]:not(:active):not(hover) {
+            color: var(--core-color-solid-slate-50);
         }
-    
+
+        &.animated::before {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            animation: slideIn var(--core-motion-duration-200)
+                var(--motion-easing-inandout);
+            background-color: var(--semantic-color-typography-prominent);
+            border-radius: inherit;
+            z-index: -10;
+        }
     }
+
     &__bullet {
         width: var(--core-size-400);
         height: var(--core-size-400);
-        border-radius: var( --core-size-4800);
+        border-radius: var(--core-size-4800);
+        position: relative;
         background-color: var(--core-color-opacity-black-75);
         cursor: pointer;
+
         &:hover {
             background-color: var(--core-color-opacity-black-100);
-            animation-timing-function: var(--core-motion-ease-400);
-            animation-duration: var(--core-motion-duration-200);
         }
+
         &:active {
             background-color: var(--core-color-opacity-black-200);
-            animation-timing-function: var(--core-motion-ease-400);
-            animation-duration: var(--core-motion-duration-200);
         }
-        &[aria-current=true] {
-             background-color: var(--semantic-color-typography-prominent);
+        &.animated-bullet::before {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            animation: slideIn var(--core-motion-duration-200)
+                var(--motion-easing-inandout);
+            background-color: var(--semantic-color-typography-prominent);
+            border-radius: inherit;
+            z-index: -10;
         }
-        
     }
 }
+
 .hidden_pages {
-   
     height: var(--core-size-1600);
     width: var(--core-size-1600);
     border-radius: var(--core-size-200);
@@ -72,10 +92,22 @@
         text-align: center;
     }
 }
-.number-text{
-    &[aria-current=true] {
+
+.number-text {
+    &[aria-current="true"] {
         font-weight: bold;
         color: var(--core-color-solid-slate-50);
     }
+
     color: var(--semantic-color-typography-default);
+}
+
+@keyframes slideIn {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
 }
